--- a/core/templates/content/image.html
+++ b/core/templates/content/image.html
@@ -1,1 +1,5 @@
-{% with image=content %}<a href="{% url "home:view_image" image.id %}"><img src="{{ image.source.url }}" class="img-fluid mx-auto d-block"></a>{% endwith %}
+{% with image=content %}
+        <a href="{% url "home:view_image" image.id %}">
+            <img src="{{ image.source.url }}" style="max-width: 80%; height: auto;" class="mx-auto d-block">
+        </a>
+{% endwith %}
